@@ -8,6 +8,8 @@ function (h/t Erich Studerus)
 * Additional parsing of 'month' field to accomodate days and ranges of days and months.  Example bib entries
 that will be parsed correctly include `month = jun # "/" # jul`, `month = "20~" # jan`, 
 `month = "20--25~" # dec`, `month =  "10~" # jan # "/" # feb` (request of Stephen Eglen)
+* Added argument 'group' to `ReadZotero` for specifying a groupID to query a group library instead of a 
+user library (h/t Greg Blomquist).
 
 BUG FIXES
 
